package ar.utnba.ddsi.depoautomatizado.models.entities.robots;

public class AdapterClark extends Robot {
    
    public AdapterClark(Long id) {
        super(id);
    }

    //TODO
} 