package ar.utnba.ddsi.depoautomatizado.models.entities.robots;

public class AdapterDrone extends Robot {
    
    public AdapterDrone(Long id) {
        super(id);
    }

    //TODO
} 